--- a/requirements.txt
+++ b/requirements.txt
@@ -2,6 +2,7 @@ asgiref==3.3.4
 Django==3.2
 django-extensions==3.1.2
 djangorestframework==3.12.4
-PyJWT==2.0.1
+djangorestframework-jwt==1.11.0
+PyJWT==1.7.1
 pytz==2021.1
 sqlparse==0.4.1
